--- a/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
+++ b/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
@@ -404,8 +404,8 @@
                         <outlet property="mangoStepper" destination="xbn-6P-grO" id="BE5-38-GrC"/>
                         <outlet property="pineappleLabel" destination="MpT-VW-hCb" id="D7U-Xh-2sZ"/>
                         <outlet property="pineappleStepper" destination="Rcr-xr-eqz" id="nRD-Vy-22j"/>
-                        <outlet property="starwberryStepper" destination="ZQk-f4-zrz" id="zx7-SC-tcA"/>
                         <outlet property="strawberryLabel" destination="0yV-kn-zaT" id="QXV-ed-2cu"/>
+                        <outlet property="strawberryStepper" destination="ZQk-f4-zrz" id="vYg-iy-ErT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ieh-6D-g1l" sceneMemberID="firstResponder"/>
